# listenmoe-app

./: .appimage-builder.yml  .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: linux.yml  win.yml
icons/: resources.xml
po/: am.po  ar.po  az.po  bg.po  bn.po  cs.po  da.po  de.po  el.po  en.po  eo.po  es.po  et.po  fa.po  fi.po  fr.po  ga.po  ha.po  he.po  hi.po  hr.po  hu.po  id.po  it.po  ja.po  jv.po  kk.po  km.po  ko.po  ky.po  lo.po  lt.po  lv.po  ml.po  mn.po  ms.po  mt.po  my.po  ne.po  nl.po  (+18 more)
src/: listen.rs  main.rs  meta.rs  setup.rs  ui.rs
