[package]
name = "listenmoe"
description = "Anime/Japanese Radio powered by LISTEN.moe!"
authors = ["noobping"]
version = "0.1.4"
edition = "2021"

[features]
setup = ["dirs"]

[dependencies]
rodio = { version = "^0.21.1", default-features = false, features = ["playback"] }
symphonia = { version = "^0.5.5", features = ["ogg", "vorbis"] }
reqwest = { version = "^0.12", default-features = false, features = ["blocking", "rustls-tls-webpki-roots", "http2", "json"] }
gtk = { version = "^0.10", package = "gtk4", features = ["gnome_48"] }
adw = { version = "^0.8.0", package = "libadwaita", features = ["v1_8"] }
futures-util = { version = "^0.3.31", features = ["tokio-io"] }
rustls = { version = "^0.23.35", default-features = false, features = ["ring"] }
serde_json = "^1.0.145"
tokio = { version = "^1.48.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tokio-tungstenite = { version = "^0.28.0", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
tokio-util = { version = "^0.7.17", features = ["io"] }
dirs = { version = "^6.0.0", optional = true}
serde = "^1.0.228"

[build-dependencies]
glib-build-tools = "^0.21.0"
